# good-student

./: README.md  configs.yaml  examinee.py  logger.py  mysql_client.py  pyproject.toml  requirements.txt
mysql/: docker-compose.yml
tests/: test_mysql_client.py
