[tool.poetry]
name = "good-student"
version = "0.1.0"
description = ""
authors = ["jason.ym <jason.ym.zeng@foxconn.com>"]
readme = "README.md"
packages = [{include = "good_student"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.9"
pyyaml = "^6.0"
mysql-connector-python = "^8.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
